--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1>Biodata Diri</h1>
 
          <!-- Foto Profil -->
-        <img src="c:\Users\Delight-PC\OneDrive\Gambar\Saved Pictures\Gambar WhatsApp 2025-07-21 pukul 13.34.45_a201bb4f.jpg" alt="Foto Profil" class="profile-img">
+        <img src="./Profil.jpg" alt="Foto Profil" class="profile-img">
 
         <div class="biodata-content"></div>
         <p><strong>Nama:</strong> Juliansyah Putra Perdhana</p>
